--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <input type="text" id="myInput" onkeyup="search()" placeholder="Search for names.." title="Type in a name">
+    <input type="text" id="myInput" onkeyup="search()" placeholder="Search.." title="Type in a name">
 
     <main class="cards">
         <article class="card" id="001">
